migrate to Java 11. issue #466